--- a/playground_cascade.ipynb
+++ b/playground_cascade.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +47,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xml file found\n"
+     ]
+    }
+   ],
    "source": [
-    "cascade_path = \"./haarcascade_frontalface_default.xml\"\n",
+    "cascade_path = \"./models/haarcascade_frontalface_default.xml\"\n",
+    "face_cascade = None\n",
     "if os.path.exists(cascade_path):\n",
-    "    face_cascade = cv2.CascadeClassifier(\"./haarcascade_frontalface_default.xml\")\n",
+    "    face_cascade = cv2.CascadeClassifier(cascade_path)\n",
+    "    print(\"xml file found\")\n",
     "else:\n",
     "    print(\"xml file for cascade not found, exiting program\")\n",
     "    sys.exit"
@@ -61,9 +71,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hewwo: ./dataset\\cristiano_ronaldo\\1.jpg\n",
+      "hewwo: ./dataset\\cristiano_ronaldo\\4.jpg\n",
+      "hewwo: ./dataset\\cristiano_ronaldo\\9.jpg\n",
+      "hewwo: ./dataset\\erling_haaland\\10.jpg\n",
+      "hewwo: ./dataset\\erling_haaland\\15.jpg\n",
+      "hello: ./dataset\\erling_haaland\\18.jpg\n",
+      "hewwo: ./dataset\\erling_haaland\\2.jpg\n",
+      "hewwo: ./dataset\\jorginho\\13.jpg\n",
+      "hewwo: ./dataset\\karim_benzema\\17.jpg\n",
+      "hewwo: ./dataset\\kylian_mbappe\\3.jpg\n",
+      "hewwo: ./dataset\\kylian_mbappe\\4.jpg\n",
+      "hewwo: ./dataset\\kylian_mbappe\\9.jpg\n",
+      "hewwo: ./dataset\\lionel_messi\\1.jpg\n",
+      "hewwo: ./dataset\\mohamed_salah\\11.jpg\n",
+      "hewwo: ./dataset\\mohamed_salah\\13.jpg\n",
+      "hewwo: ./dataset\\mohamed_salah\\4.jpg\n",
+      "hewwo: ./dataset\\neymar\\14.jpg\n",
+      "hewwo: ./dataset\\robert_lewandoski\\11.jpg\n",
+      "hewwo: ./dataset\\robert_lewandoski\\4.jpg\n",
+      "hewwo: ./dataset\\robert_lewandoski\\9.jpg\n",
+      "hello: ./dataset\\romelu_lukaku\\18.jpg\n",
+      "hewwo: ./dataset\\romelu_lukaku\\20.jpg\n"
+     ]
+    }
+   ],
    "source": [
     "parent_path = \"./dataset\"\n",
     "class_names = os.listdir(parent_path)\n",
@@ -79,7 +118,10 @@
     "        \n",
     "        detected_face = face_cascade.detectMultiScale(gray_image, scaleFactor=1.2, minNeighbors=1, minSize=(60, 60))\n",
     "        if(len(detected_face) < 1):\n",
+    "            print(f\"hello: {full_image_path}\")\n",
     "            continue\n",
+    "        elif(len(detected_face) > 1):\n",
+    "            print(f\"hewwo: {full_image_path}\")\n",
     "\n",
     "        for face_box in detected_face:\n",
     "            x, y, w, h = face_box\n",
@@ -99,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -271,6 +313,8 @@
     "## ini 10 no detect, 6 multiple detect\n",
     "detected_face = face_cascade.detectMultiScale(gray_image, scaleFactor=1.2, minNeighbors=, minSize=(30, 30), flags=cv2.CASCADE_DO_ROUGH_SEARCH)\n",
     "\n",
+    "detected_face = face_cascade.detectMultiScale(gray_image, scaleFactor=1.2, minNeighbors=1, minSize=(60, 60))\n",
+    "        \n",
     "\"\"\"\n",
     "scaleFactor -> semakin kecil = detect face up, berat\n",
     "minNeighthors\n",
