completed train, test, crop
need more fine tuning to increase accuracy

--- a/playground_cascade.ipynb
+++ b/playground_cascade.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
+    "import cv2 \n",
     "import math\n",
     "import os\n",
     "import sys\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,65 +181,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "path: ./dataset\\cristiano_ronaldo\\20.jpg  -  hewwo: 12\n",
-      "path: ./dataset\\cristiano_ronaldo\\3.jpg  -  hewwo: 13\n",
-      "path: ./dataset\\cristiano_ronaldo\\4.jpg  -  hewwo: 14\n",
-      "path: ./dataset\\erling_haaland\\1.jpg  -  hewwo: 20\n",
-      "path: ./dataset\\erling_haaland\\10.jpg  -  hewwo: 21\n",
-      "path: ./dataset\\erling_haaland\\15.jpg  -  hewwo: 26\n",
-      "path: ./dataset\\erling_haaland\\17.jpg  -  hewwo: 28\n",
-      "path: ./dataset\\erling_haaland\\18.jpg  -  hewwo: 29\n",
-      "path: ./dataset\\erling_haaland\\2.jpg  -  hewwo: 31\n",
-      "path: ./dataset\\erling_haaland\\5.jpg  -  hewwo: 35\n",
-      "path: ./dataset\\erling_haaland\\6.jpg  -  hewwo: 36\n",
-      "path: ./dataset\\erling_haaland\\8.jpg  -  hewwo: 38\n",
-      "path: ./dataset\\erling_haaland\\9.jpg  -  hewwo: 39\n",
-      "path: ./dataset\\jorginho\\7.jpg  -  hewwo: 57\n",
-      "path: ./dataset\\karim_benzema\\10.jpg  -  hewwo: 61\n",
-      "path: ./dataset\\karim_benzema\\13.jpg  -  hewwo: 64\n",
-      "path: ./dataset\\karim_benzema\\17.jpg  -  hewwo: 68\n",
-      "path: ./dataset\\karim_benzema\\19.jpg  -  hewwo: 70\n",
-      "path: ./dataset\\kylian_mbappe\\17.jpg  -  hewwo: 88\n",
-      "path: ./dataset\\kylian_mbappe\\18.jpg  -  hewwo: 89\n",
-      "path: ./dataset\\kylian_mbappe\\4.jpg  -  hewwo: 94\n",
-      "path: ./dataset\\kylian_mbappe\\6.jpg  -  hewwo: 96\n",
-      "path: ./dataset\\lionel_messi\\1.jpg  -  hewwo: 100\n",
-      "path: ./dataset\\lionel_messi\\11.jpg  -  hewwo: 102\n",
-      "path: ./dataset\\lionel_messi\\13.jpg  -  hewwo: 104\n",
-      "path: ./dataset\\lionel_messi\\17.jpg  -  hewwo: 108\n",
-      "path: ./dataset\\lionel_messi\\19.jpg  -  hewwo: 110\n",
-      "path: ./dataset\\mohamed_salah\\11.jpg  -  hewwo: 122\n",
-      "path: ./dataset\\mohamed_salah\\13.jpg  -  hewwo: 124\n",
-      "path: ./dataset\\mohamed_salah\\4.jpg  -  hewwo: 134\n",
-      "path: ./dataset\\mohamed_salah\\5.jpg  -  hewwo: 135\n",
-      "path: ./dataset\\mohamed_salah\\8.jpg  -  hewwo: 138\n",
-      "path: ./dataset\\neymar\\15.jpg  -  hewwo: 146\n",
-      "path: ./dataset\\neymar\\6.jpg  -  hewwo: 156\n",
-      "path: ./dataset\\robert_lewandoski\\11.jpg  -  hewwo: 162\n",
-      "path: ./dataset\\robert_lewandoski\\13.jpg  -  hewwo: 164\n",
-      "path: ./dataset\\robert_lewandoski\\17.jpg  -  hewwo: 168\n",
-      "path: ./dataset\\robert_lewandoski\\3.jpg  -  hewwo: 173\n",
-      "path: ./dataset\\robert_lewandoski\\9.jpg  -  hewwo: 179\n",
-      "path: ./dataset\\romelu_lukaku\\1.jpg  -  hewwo: 180\n",
-      "path: ./dataset\\romelu_lukaku\\11.jpg  -  hewwo: 182\n",
-      "path: ./dataset\\romelu_lukaku\\2.jpg  -  hewwo: 191\n",
-      "path: ./dataset\\romelu_lukaku\\20.jpg  -  hewwo: 192\n",
-      "path: ./dataset\\romelu_lukaku\\5.jpg  -  OWO: 195\n",
+      "path: ./dataset/cristiano_ronaldo\\1.jpg  -  OWO: 0\n",
+      "path: ./dataset/erling_haaland\\18.jpg  -  OWO: 29\n",
+      "path: ./dataset/jorginho\\14.jpg  -  OWO: 45\n",
+      "path: ./dataset/karim_benzema\\20.jpg  -  OWO: 72\n",
+      "path: ./dataset/kylian_mbappe\\11.jpg  -  OWO: 82\n",
+      "path: ./dataset/kylian_mbappe\\3.jpg  -  OWO: 93\n",
+      "path: ./dataset/kylian_mbappe\\4.jpg  -  hewwo: 94\n",
+      "path: ./dataset/lionel_messi\\1.jpg  -  hewwo: 100\n",
+      "path: ./dataset/mohamed_salah\\11.jpg  -  hewwo: 122\n",
+      "path: ./dataset/mohamed_salah\\13.jpg  -  OWO: 124\n",
+      "path: ./dataset/mohamed_salah\\17.jpg  -  hewwo: 128\n",
+      "path: ./dataset/mohamed_salah\\6.jpg  -  OWO: 136\n",
+      "path: ./dataset/neymar\\16.jpg  -  OWO: 147\n",
+      "path: ./dataset/robert_lewandoski\\9.jpg  -  hewwo: 179\n",
+      "path: ./dataset/romelu_lukaku\\11.jpg  -  OWO: 182\n",
+      "path: ./dataset/romelu_lukaku\\12.jpg  -  OWO: 183\n",
+      "path: ./dataset/romelu_lukaku\\16.jpg  -  OWO: 187\n",
+      "path: ./dataset/romelu_lukaku\\17.jpg  -  OWO: 188\n",
+      "path: ./dataset/romelu_lukaku\\18.jpg  -  OWO: 189\n",
+      "path: ./dataset/romelu_lukaku\\3.jpg  -  OWO: 193\n",
+      "path: ./dataset/romelu_lukaku\\6.jpg  -  OWO: 196\n",
       "200\n",
-      "total hewwo: 43\n",
-      "total OWO: 1\n"
+      "total hewwo: 5\n",
+      "total OWO: 16\n",
+      "total miss: 21\n"
      ]
     }
    ],
    "source": [
-    "parent_path = \"./dataset\"\n",
+    "parent_path = \"./dataset/\"\n",
     "class_names = os.listdir(parent_path)\n",
     "\n",
     "face_datasets = []\n",
@@ -252,9 +230,13 @@
     "    class_path = os.path.join(parent_path, labels)\n",
     "    for image in os.listdir(class_path):\n",
     "        full_image_path = os.path.join(class_path, image)\n",
+    "        color_image = cv2.imread(full_image_path)\n",
     "        gray_image = cv2.imread(full_image_path, 0)\n",
     "\n",
-    "        detected_face = face_cascade.detectMultiScale(gray_image, scaleFactor=1.01, minNeighbors=5, minSize=(85, 85), flags=cv2.CASCADE_DO_CANNY_PRUNING)\n",
+    "        detected_face = face_cascade.detectMultiScale(gray_image, scaleFactor=1.2, minNeighbors=5, flags=cv2.CASCADE_DO_ROUGH_SEARCH)\n",
+    "\n",
+    "        # detected_face = face_cascade.detectMultiScale(gray_image, scaleFactor=1.01, minNeighbors=20, minSize=(30,30), maxSize=(300, 300))\n",
+    "\n",
     "        \n",
     "        if(len(detected_face) < 1):\n",
     "            print(f\"path: {full_image_path}\", end=\"  -  \")\n",
@@ -262,20 +244,26 @@
     "            owo+=1\n",
     "            \n",
     "        elif(len(detected_face) >1):\n",
+    "            # for face in detected_face:\n",
+    "            #     x, y, w, h = face\n",
+    "            #     cv2.rectangle(color_image, (x, y), (x+w, y+h), (0, 255, 0))\n",
+    "            # show_image(color_image)\n",
     "            print(f\"path: {full_image_path}\", end=\"  -  \")\n",
     "            print(f\"hewwo: {count}\")\n",
     "            hewwo+=1\n",
+    "\n",
     "        \n",
     "        count+=1\n",
     "        \n",
     "print(count)\n",
     "print(f\"total hewwo: {hewwo}\")\n",
-    "print(f\"total OWO: {owo}\")"
+    "print(f\"total OWO: {owo}\")\n",
+    "print(f\"total miss: {hewwo+owo}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -298,8 +286,8 @@
    ],
    "source": [
     "print(all_path[79])\n",
-    "## ini gaada no detect, tapi 138 yang multiple detect\n",
-    "# detected_face = face_cascade.detectMultiScale(gray_image, scaleFactor=1.01, minNeighbors=1, minSize=(30,30), maxSize=(300, 300))\n",
+    "## ini gaada no detect, tapi 89 yang multiple detect\n",
+    "# detected_face = face_cascade.detectMultiScale(gray_image, scaleFactor=1.01, minNeighbors=5, minSize=(30,30), maxSize=(300, 300))\n",
     "\n",
     "## ini 28 no detect, 9 multiple detect\n",
     "# detected_face = face_cascade.detectMultiScale(gray_image, scaleFactor=1.2, minNeighbors=3, minSize=(30, 30), maxSize=(300, 300))\n",
@@ -323,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
